# permapp

./: .env.template  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Makefile  README.md  _config.yml  index.html  manage.py  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  setup.py  tailwind.config.cjs  tsconfig.json  vite.config.ts  webpack.config.js
_layouts/: default.html
api/: geoportal.py  urls.py
api/admin/: __init__.py  mixins.py  project.py
api/forms/: __init__.py  aggregation.py  fields.py  forms.py  mixins.py  project.py  project_map.py  widgets.py
api/migrations/: 0001_initial.py  0002_auto_20200306_1050.py  0002_auto_20200326_1548.py  0002_auto_20200327_1624.py  0002_auto_20200328_1445.py  0002_auto_20200328_1728.py  0002_auto_20200402_1119.py  0002_auto_20200403_1931.py  0002_parcel.py  0003_auto_20200306_1054.py  0003_auto_20200326_1708.py  0003_auto_20200327_1641.py  0003_auto_20200328_1746.py  (+50 more)
backend/: manage.py  requirements-dev.txt  setup.py
custom_auth/: models.py
design_perma/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
designdef/: __init__.py  apps.py
designs/: __init__.py  apps.py  serializers.py  signals.py  urls.py  views.py
map_types/: apps.py
permapp/: admin.py  asgi.py  urls.py  wsgi.py
spa/: .env.development  .env.production  .gitignore  urls.py  views.py  vue.config.js
src/: GeoUtils.js  config.js  geo.js  index.js  layers.js  store.js  utils.js
static/: app.config.jsonc
system_types/: __init__.py  apps.py  signals.py
(+294 files in other folders)
